MODINV-1006 Sonar issues fixes